--- a/Designa/Views/_ViewImports.cshtml
+++ b/Designa/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Designa
 @using Designa.Models
 @using X.PagedList.Mvc.Core;
+@using Newtonsoft.Json;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
