--- a/Designa/wwwroot/css/site.css
+++ b/Designa/wwwroot/css/site.css
@@ -91,3 +91,51 @@ html[data-bs-theme="dark"] {
     display:inline-block;
 
 }
+.bg-header {
+    background-color: #4a6da7;
+}
+
+.ui-menu-item .ui-menu-icon {
+    display: none;
+}
+
+/* Tornando a caixa de seleção dos textos não transparente */
+.ui-autocomplete {
+    background-color: inherit;
+    border: 1px solid #424549; /* Borda */
+    padding: 5px; /* Espaçamento interno */
+    max-height: 200px; /* Altura máxima */
+    overflow-y: auto; /* Rolagem vertical */
+    border-radius: 5px;
+}
+.ui-autocomplete:focus{
+    max-width: 100%;
+}
+
+/* Estilo dos itens do menu de autocomplete */
+.ui-menu-item {
+    padding: 5px; /* Espaçamento interno */
+    cursor: pointer; /* Cursor ao passar por cima */
+}
+
+/* Estilo do texto nos itens do menu de autocomplete */
+.ui-menu-item-wrapper {
+    font-size: 14px; /* Tamanho da fonte */
+    color: inherit; /* Cor do texto */
+}
+
+@media print {
+    @page {
+        margin-top: 1.5cm;
+        margin-right: 1cm;
+        margin-bottom: 2cm;
+        margin-left: 0.5cm;
+    }
+    header, .not-print {
+        display: none !important;
+    }
+
+    .card {
+        page-break-before: always; /* Force a page break before each card */
+    }
+}
